[tool.poetry]
name = "app"
version = "0.1.0"
description = "A python implementation of the smoking cessation onboarding flows"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/praekeltfoundation/who-smoking-cessation-py"
repository = "https://github.com/praekeltfoundation/who-smoking-cessation-py"

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^6.7.1"
aioredis = "^1.3.1"
sanic = "^20.12.2"
prometheus-client = "^0.9.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
sentry-sdk = "^1.0.0"
aiohttp-client-cache = "0.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
pytest-sanic = "^1.7.0"
Faker = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov=who"
